--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -29,11 +29,12 @@ window#waybar{
     box-shadow: 0px 0px 2px rgba(0, 0, 0, .5);
 }
 tooltip {
-    background:rgb(50,50,50)
+    background:@background;
+    color: @color7;
 }
 #clock:hover, #custom-pacman:hover, #custom-notification:hover,#bluetooth:hover,#network:hover,#battery:hover, #cpu:hover,#memory:hover,#temperature:hover{
     transition: all .3s ease;
-    color:@color0;
+    color:@color9;
 }
 #custom-notification {
     padding: 0px 5px;
