New wallpaper selection. No more random. also minor updates to swaync and a lot of fixing to wofi tehe oops.

--- a/.config/swaync/style.css
+++ b/.config/swaync/style.css
@@ -301,7 +301,7 @@
 }
 
 .widget-buttons-grid > flowbox > flowboxchild > button.toggle:checked {
-    background: alpha(@mycolor,.5);
+    background: @mycolor;
 }
 
 .widget-menubar > box > .menu-button-bar > button {
