--- a/.config/wlogout/style.css
+++ b/.config/wlogout/style.css
@@ -1,48 +1,67 @@
+@import url('/home/eli/.cache/wal/colors-waybar.css');
 * {
 	all: unset;
 	background-image: none;
-	transition: 400ms cubic-bezier(0.05, 0.7, 0.1, 1);
-}
+    margin: unset;
+    padding: unset;
 
-window {
-	background: rgba(0, 0, 0, 0.8);
 }
-
 button {
 	font-family: 'CodeNewRoman Nerd Font Mono';
-	font-size: 1rem;
-	background-color: rgba(11, 11, 11, 0.9);
-	color: #FFFFFF;
-	margin: 2rem;
-	border-radius: 2rem;
-	padding: 3rem;
+	background-color: alpha(@color9,1);
+	border-radius: 5px;
 	background-repeat: no-repeat;
 	background-position: center;
-}
 
+
+}
 #lock {
-    background-image: image(url("/home/eli/.config/wlogout/lock.png"))
-}
-#hibernate {
-    background-image: image(url("/home/eli/.config/wlogout/sleep.png"))
-}
-#logout {
-    background-image: image(url("/home/eli/.config/wlogout/logout.png"))
+    background-image: image(url("/home/eli/.config/wlogout/lock.png"));
+    margin : 5px 5px 5px 300px;
+    padding: 5px;
 }
 #shutdown {
-    background-image: image(url("/home/eli/.config/wlogout/power.png"))
+    background-image: image(url("/home/eli/.config/wlogout/power.png"));
+    margin : 5px 300px 5px 5px;
+    padding: 5px;
 }
-#suspend {
-    background-image: image(url("/home/eli/.config/wlogout/pause.png"))
+#logout {
+    background-image: image(url("/home/eli/.config/wlogout/logout.png"));
+    margin : 5px 300px 5px 5px;
+    padding: 5px;
 }
 #reboot {
-    background-image: image(url("/home/eli/.config/wlogout/restart.png"))
+
+    background-image: image(url("/home/eli/.config/wlogout/restart.png"));
+    margin : 5px 5px 5px 300px;
+    padding: 5px;
 }
 
-button:focus,
-button:active,
-button:hover {
-	background-color: rgba(80, 80, 80, 0.8);
-	border-radius: 5rem;
+#lock:focus {
+    background-image: image(url("/home/eli/.config/wlogout/lock.png"));
+    margin : -50px 5px 5px 200px;
+    padding: 10px;
+
+}
+#shutdown:focus {
+    background-image: image(url("/home/eli/.config/wlogout/power.png"));
+    margin : 5px 200px -50px 5px;
+    padding: 10px;
+}
+#logout:focus {
+    background-image: image(url("/home/eli/.config/wlogout/logout.png"));
+    margin : -50px 200px 5px 5px;
+    padding: 10px;
+}
+#reboot:focus {
+
+    background-image: image(url("/home/eli/.config/wlogout/restart.png"));
+    margin : 5px 5px -50px 200px;
+    padding: 10px;
+}
+button:focus{
+	background-color: alpha(@color5,1);
     color: #000000;
+	transition: 300ms cubic-bezier(0, 0, 1, 1);
+    background-position:center;
 }
