--- a/.config/wofi/style.css
+++ b/.config/wofi/style.css
@@ -36,7 +36,7 @@ window {
     margin: 2px;
     padding: 5px;
     border: none;
-    animation: slideIn 1.5s ease-in-out;
+    animation: slideIn .5s ease-in-out;
 
 }
 #outer-box {    
@@ -56,7 +56,7 @@ window {
     border: none;
     outline: none;
     color: @text;
-    animation: slideIn 1s ease-in-out;
+    animation: slideIn .5s ease-in-out;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, .2);
     border-radius:10;
 }
@@ -99,5 +99,5 @@ window {
 }
 #entry:drop(active) {
     background-color: @lavender !important;
-    animation: fadeIn 1s ease-in-out;
+    animation: fadeIn .5s ease-in-out;
 }
