--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -58,18 +58,19 @@ tooltip {
 #workspaces button {
     all:unset;
     padding: 0px 5px;
-    color: rgba(0,0,0,0);
-    text-shadow: 0px 0px 1px rgba(0, 0, 0, .4);
+    color: alpha(@color9,.4);
+    transition: all .2s ease;
 }
 #workspaces button:hover {
     color:rgba(0,0,0,0);
-    text-shadow: 0px 0px 1px rgba(0, 0, 0, .7);
+    border: none;
+    text-shadow: 0px 0px 1.5px rgba(0, 0, 0, .5);
     transition: all 1s ease;
 }
 #workspaces button.active {
     color: @color9;
     border: none;
-    transition: all 1s ease;
+    text-shadow: 0px 0px 2px rgba(0, 0, 0, .5);
 }
 #workspaces button.empty {
     color: rgba(0,0,0,0);
@@ -85,7 +86,7 @@ tooltip {
 #workspaces button.empty.active {
     color: @color9;
     border: none;
-    transition: all 1s ease;
+    text-shadow: 0px 0px 2px rgba(0, 0, 0, .5);
 }
 #bluetooth{
     padding: 0px 5px;
