--- a/.config/wofi/style.css
+++ b/.config/wofi/style.css
@@ -1,9 +1,14 @@
 @import url('/home/eli/.cache/wal/colors-waybar.css');
-
 @define-color mauve  @color9;
 @define-color red  @color9;
 @define-color lavender  @color7;
 @define-color text  @color7;
+@keyframes fadeIn {
+    0% {
+    }
+    100% {
+    }
+}
 
 * {
     font-family: 'CodeNewRoman Nerd Font Mono', monospace;
@@ -21,22 +26,10 @@ window {
     border-radius: 10px;
     background-color: alpha(@background,.5);
 }
-/* Slide In */
-@keyframes slideIn {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
-}
-
-/* Inner Box */
 #inner-box {
     margin: 2px;
     padding: 5px;
     border: none;
-    animation: slideIn .5s ease-in-out;
 
 }
 #outer-box {    
@@ -56,7 +49,6 @@ window {
     border: none;
     outline: none;
     color: @text;
-    animation: slideIn .5s ease-in-out;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, .2);
     border-radius:10;
 }
@@ -99,5 +91,4 @@ window {
 }
 #entry:drop(active) {
     background-color: @lavender !important;
-    animation: fadeIn .5s ease-in-out;
 }
