--- a/.config/swaync/style.css
+++ b/.config/swaync/style.css
@@ -1,9 +1,9 @@
 @import url('/home/eli/.cache/wal/colors-waybar.css');
-@define-color mpris-album-art-overlay rgba(0, 0, 0, 0.55);
-@define-color mpris-button-hover rgba(0, 0, 0, 0.50);
-@define-color text @color7;
+@define-color mpris-album-art-overlay alpha(@background, 0.55);
+@define-color mpris-button-hover alpha(@background, 0.50);
+@define-color text @color15;
 @define-color bg alpha(@background,.5);
-@define-color bg-hover rgba(50,50,50,.8);
+@define-color bg-hover alpha(@background,.8);
 @define-color mycolor @color9;
 @define-color border-color alpha(@mycolor, 0.15);
 
@@ -278,12 +278,12 @@
 
 .widget-buttons-grid>flowbox>flowboxchild>button label {
     font-size: 20px;
-    color: @text;
+    color: @color7;
     transition: all .7s ease;
 }
 .widget-buttons-grid>flowbox>flowboxchild>button:hover label {
     font-size: 20px;
-    color: @background;
+    color: @text;
     transition: all .7s ease;
 }
 .widget-buttons-grid > flowbox > flowboxchild > button {
@@ -294,7 +294,7 @@
     transition: all .5s ease;
 }
 .widget-buttons-grid > flowbox > flowboxchild > button:hover {
-    background: @color5;
+    background: @color4;
     box-shadow: 0px 0px 2px rgba(0, 0, 0, .2);
     transition: all .5s ease;
 
@@ -302,6 +302,9 @@
 
 .widget-buttons-grid > flowbox > flowboxchild > button.toggle:checked {
     background: @mycolor;
+}
+.widget-buttons-grid > flowbox > flowboxchild > button.toggle:checked label {
+    color: @background;
 }
 
 .widget-menubar > box > .menu-button-bar > button {
