--- a/.config/wlogout/style.css
+++ b/.config/wlogout/style.css
@@ -1,17 +1,17 @@
 @import url('/home/eli/.cache/wal/colors-waybar.css');
 * {
-	all: unset;
-	background-image: none;
+    all: unset;
+    background-image: none;
     margin: unset;
     padding: unset;
-
+    transition: 200ms cubic-bezier(0, 0, 1, 1);
 }
 button {
-	font-family: 'CodeNewRoman Nerd Font Mono';
-	background-color: alpha(@color9,1);
-	border-radius: 5px;
-	background-repeat: no-repeat;
-	background-position: center;
+    font-family: 'CodeNewRoman Nerd Font Mono';
+    background-color: alpha(@color9,1);
+    border-radius: 5px;
+    background-repeat: no-repeat;
+    background-position: center;
 
 
 }
@@ -19,49 +19,52 @@ button {
     background-image: image(url("/home/eli/.config/wlogout/lock.png"));
     margin : 5px 5px 5px 300px;
     padding: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 }
 #shutdown {
     background-image: image(url("/home/eli/.config/wlogout/power.png"));
     margin : 5px 300px 5px 5px;
     padding: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 }
 #logout {
     background-image: image(url("/home/eli/.config/wlogout/logout.png"));
     margin : 5px 300px 5px 5px;
     padding: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 }
 #reboot {
 
     background-image: image(url("/home/eli/.config/wlogout/restart.png"));
     margin : 5px 5px 5px 300px;
     padding: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 }
 
 #lock:focus {
     background-image: image(url("/home/eli/.config/wlogout/lock.png"));
-    margin : -50px 5px 5px 200px;
-    padding: 10px;
+    margin : 5px 5px 5px 200px;
+    padding: 5px;
 
 }
 #shutdown:focus {
     background-image: image(url("/home/eli/.config/wlogout/power.png"));
-    margin : 5px 200px -50px 5px;
-    padding: 10px;
+    margin : 5px 200px 5px 5px;
+    padding: 5px;
 }
 #logout:focus {
     background-image: image(url("/home/eli/.config/wlogout/logout.png"));
-    margin : -50px 200px 5px 5px;
-    padding: 10px;
+    margin : 5px 200px 5px 5px;
+    padding: 5px;
 }
 #reboot:focus {
-
     background-image: image(url("/home/eli/.config/wlogout/restart.png"));
-    margin : 5px 5px -50px 200px;
-    padding: 10px;
+    margin : 5px 5px 5px 200px;
+    padding: 5px;
 }
 button:focus{
-	background-color: alpha(@color5,1);
+    background-color: alpha(@color5,1);
     color: #000000;
-	transition: 300ms cubic-bezier(0, 0, 1, 1);
+
     background-position:center;
 }
