--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,4 +1,4 @@
-@import url('/home/eli/.cache/wal/colors-waybar.css');
+@import url('../../.cache/wal/colors-waybar.css');
 
 * {
     font-size:15px;
