--- a/.config/wofi/style.css
+++ b/.config/wofi/style.css
@@ -1,4 +1,5 @@
 @import url('/home/eli/.cache/wal/colors-waybar.css');
+
 @define-color mauve  @color9;
 @define-color red  @color9;
 @define-color lavender  @color7;
@@ -28,9 +29,8 @@ window {
 }
 #inner-box {
     margin: 2px;
-    padding: 5px;
+    padding: 5px
     border: none;
-
 }
 #outer-box {    
     border: none;
@@ -49,8 +49,9 @@ window {
     border: none;
     outline: none;
     color: @text;
-    box-shadow: 1px 1px 5px rgba(0, 0, 0, .2);
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, .5);
     border-radius:10;
+    background-color: alpha(@background,.2);
 }
 #input image {
     border: none;
@@ -64,7 +65,6 @@ window {
 #input:focus {
     outline: none;
     border: none;
-    box-shadow: 1px 1px 5px rgba(0, 0, 0, .2);
     border-radius:10;
 }
 #text {
@@ -76,6 +76,7 @@ window {
 #entry {
     border: none;
     margin: 5px;
+    padding-left: 10px;
 }
 #entry arrow {
     border: none;
