--- a/.config/wofi/style1.css
+++ b/.config/wofi/style1.css
@@ -42,8 +42,9 @@ window {
     border: none;
     outline: none;
     color: @text;
-    box-shadow: 1px 1px 5px rgba(0, 0, 0, .2);
+    box-shadow: 1px 1px 5px rgba(0,0,0, .5);
     border-radius:10;
+    background-color: alpha(@background,.2);
 }
 #input image {
     border: none;
@@ -58,7 +59,7 @@ window {
 #input:focus {
     outline: none;
     border: none;
-    box-shadow: 1px 1px 5px rgba(0, 0, 0, .2);
+
     border-radius:10;
 }
 #text {
