--- a/.config/wlogout/style.css
+++ b/.config/wlogout/style.css
@@ -1,4 +1,4 @@
-@import url('/home/eli/.cache/wal/colors-waybar.css');
+@import url('../../.cache/wal/colors-waybar.css');
 * {
     all: unset;
     background-image: none;
@@ -16,55 +16,46 @@ button {
 
 }
 #lock {
-    background-image: image(url("/home/eli/.config/wlogout/lock.png"));
+    background-image: image(url("../../.config/wlogout/lock.png"));
     margin : 5px 5px 5px 300px;
     padding: 5px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 6px rgba(0, 0, 0, 0.6);
 }
 #shutdown {
-    background-image: image(url("/home/eli/.config/wlogout/power.png"));
+    background-image: image(url("../../.config/wlogout/power.png"));
     margin : 5px 300px 5px 5px;
     padding: 5px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 6px rgba(0, 0, 0, 0.6);
 }
 #logout {
-    background-image: image(url("/home/eli/.config/wlogout/logout.png"));
+    background-image: image(url("../../.config/wlogout/logout.png"));
     margin : 5px 300px 5px 5px;
     padding: 5px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 6px rgba(0, 0, 0, 0.6);
 }
 #reboot {
 
-    background-image: image(url("/home/eli/.config/wlogout/restart.png"));
+    background-image: image(url("../../.config/wlogout/restart.png"));
     margin : 5px 5px 5px 300px;
     padding: 5px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 6px rgba(0, 0, 0, 0.6);
 }
 
 #lock:focus {
-    background-image: image(url("/home/eli/.config/wlogout/lock.png"));
     margin : 5px 5px 5px 200px;
-    padding: 5px;
 
 }
 #shutdown:focus {
-    background-image: image(url("/home/eli/.config/wlogout/power.png"));
     margin : 5px 200px 5px 5px;
-    padding: 5px;
 }
 #logout:focus {
-    background-image: image(url("/home/eli/.config/wlogout/logout.png"));
     margin : 5px 200px 5px 5px;
-    padding: 5px;
 }
 #reboot:focus {
-    background-image: image(url("/home/eli/.config/wlogout/restart.png"));
     margin : 5px 5px 5px 200px;
-    padding: 5px;
 }
 button:focus{
     background-color: alpha(@color5,1);
     color: #000000;
-
     background-position:center;
 }
