Waybar css update

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -9,23 +9,21 @@ window#waybar{
 }
 .modules-left {
     padding:7px;
-    margin:10 0 0 10;
+    margin:5px;
     border-radius:10px;
     background: alpha(@background,.5);
     box-shadow: 0px 0px 2px rgba(0, 0, 0, .5);
 }
 .modules-center {
     padding:7px;
-
-    margin:10 0 0 0;
+    margin:5px;
     border-radius:10px;
     background: alpha(@background,.5);
     box-shadow: 0px 0px 2px rgba(0, 0, 0, .5);
-    min-width:161px;
 }
 .modules-right {
     padding:7px;
-    margin: 10 10 0 0;
+    margin:5px;
     border-radius:10px;
     background: alpha(@background,.5);
     box-shadow: 0px 0px 2px rgba(0, 0, 0, .5);
@@ -56,54 +54,39 @@ tooltip {
 }
 #workspaces {
     padding: 0px 5px;
-    text-shadow:none;
 }
 #workspaces button {
     all:unset;
-    margin: 0px 3px;    
-    padding: 0px 2px;
-    color:rgba(0,0,0,0);
-    text-shadow:none;
-    background: linear-gradient(45deg, alpha(@color2,.5), alpha(@color9,.5));
-    border-radius: 50%;
-    transition: all .3s ease-in-out;
-    min-width: 15px;
+    padding: 0px 5px;
+    color: alpha(@color9,.4);
+    transition: all .2s ease;
 }
 #workspaces button:hover {
     color:rgba(0,0,0,0);
     border: none;
-    background: linear-gradient(45deg, alpha(@color9,1), alpha(@color2,1));
+    text-shadow: 0px 0px 1.5px rgba(0, 0, 0, .5);
+    transition: all 1s ease;
 }
 #workspaces button.active {
-    color:rgba(0,0,0,0);
+    color: @color9;
     border: none;
-    padding: 0px 2px;
-    min-width:40px;
-    border-radius:10px;
-    transition: all .3s ease-in-out;
-    background: linear-gradient(45deg, @color2, @color9);
-
-
+    text-shadow: 0px 0px 2px rgba(0, 0, 0, .5);
 }
 #workspaces button.empty {
     color: rgba(0,0,0,0);
     border: none;
-    text-shadow: 0px 0px 2px rgba(0, 0, 0, .2);
-    transition: all .3s ease-in-out;
-    background: rgba(0,0,0,0);
-
+    text-shadow: 0px 0px 1.5px rgba(0, 0, 0, .2);
 }
 #workspaces button.empty:hover {
     color: rgba(0,0,0,0);
     border: none;
     text-shadow: 0px 0px 1.5px rgba(0, 0, 0, .5);
+    transition: all 1s ease;
 }
 #workspaces button.empty.active {
-    color: rgba(0,0,0,0);
+    color: @color9;
     border: none;
-    text-shadow: none;
-    transition: all .3s ease-in-out;
-    background: linear-gradient(45deg, @color2, @color9);
+    text-shadow: 0px 0px 2px rgba(0, 0, 0, .5);
 }
 #bluetooth{
     padding: 0px 5px;
