--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -9,24 +9,24 @@ window#waybar{
 }
 .modules-left {
     padding:7px;
-    margin:5px;
+    margin:10 0 5 10;
     border-radius:10px;
     background: alpha(@background,.5);
-    box-shadow: 0px 0px 2px rgba(0, 0, 0, .5);
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, .6);
 }
 .modules-center {
     padding:7px;
-    margin:5px;
+    margin:10 0 5 0;
     border-radius:10px;
     background: alpha(@background,.5);
-    box-shadow: 0px 0px 2px rgba(0, 0, 0, .5);
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, .6);
 }
 .modules-right {
     padding:7px;
-    margin:5px;
+    margin: 10 10 5 0;
     border-radius:10px;
     background: alpha(@background,.5);
-    box-shadow: 0px 0px 2px rgba(0, 0, 0, .5);
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, .6);
 }
 tooltip {
     background:@background;
